Closed Bug 1196355 Opened 10 years ago Closed 10 years ago

ScopedGfxFeatureReporter shows - instead of ?

Categories

(Core :: Graphics, defect)

43 Branch
Unspecified
Windows
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla43
Tracking Status
firefox43 --- fixed

People

(Reporter: milan, Assigned: milan)

References

Details

Attachments

(1 file)

ScopedGfxFeatureReporter::WriteAppNote ignores the function parameter and just writes out the member status character.
Assignee: nobody → milan
Regression in 40 from bug 1154352.
Blocks: 1154352
Attachment #8649990 - Flags: review?(bgirard) → review+
Simple change, skipping try run unless I hear otherwise.
Keywords: checkin-needed
OS: Unspecified → Windows
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla43
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: