Bug 1196355: WriteAppNote should use function parameter. r=benwa